--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -15,16 +15,44 @@ import {ReactIconInline, ReactIconLi} from "components/Icons"
 
 ### <ReactIconInline i="FaHeart" /> Social Impact Work
 
-I am very active in the development of open source code and organizations for social impact, including the engineering and management of the [AI Incident Database](https://incidentdatabase.ai/), which is a collection of AI harms and near harms realized in the real world. The database is funded by private foundation donors and is the sole project of the Responsible AI Collaborative. I also previously developed a federally-recognized 501c3, the Privly Foundation, dedicated to online privacy education. The foundation's activities included [developing Open Source software](https://priv.ly/), technology workshops, and supervising student developers.
+I am very active in the development of open source code and organizations for social impact.
+Most recently I led the engineering and management of the [AI Incident Database](https://incidentdatabase.ai/),
+which is a collection of AI harms and near harms realized in the real world.
+The database is funded by private foundation donors and is the sole project of the Responsible AI Collaborative.
+The Digital Safety Research Institute, wherein I am a director, continues to engineer the database through the
+efforts of Kevin Paeth and his exceptional crew of developers.
+I also previously developed the Privly Foundation, which was dedicated to online privacy
+education. The foundation's activities included [developing Open Source software](https://priv.ly/),
+technology workshops, and supervising student developers.
 
 ### <ReactIconInline i="FaWrench" /> Engineering
 
-I strive to cover as much of the machine learning stack as possible from cloud infrastructure to hardware accelerated edge runtimes. Particular strengths of mine are Python, Keras (defining high-level APIs accelerated by hardware), Javascript, React, TensorFlow, CI/CD, and AWS/GCP/Azure. My engineering projects have spanned dataset aquisition, preparation, training, and model analysis tools. A particular engineering joy of mine is building systems (typically on the web stack) explaining the strengths and failings of trained models.
+I strive to cover as much of the machine learning stack as possible from cloud infrastructure to
+hardware accelerated edge runtimes. Particular strengths of mine are Python,
+Keras (defining high-level APIs accelerated by hardware), Javascript,
+React, TensorFlow, CI/CD, and AWS/GCP/Azure.
+My engineering projects have spanned dataset aquisition, preparation,
+training, and model analysis tools. A particular engineering joy of mine
+is building systems (typically on the web stack) explaining the strengths and failings of
+trained models.
 
-### <ReactIconInline i="FaMicrochip" /> Machine Learning + Silicon Design Startup
+### <ReactIconInline i="FaMicrochip" /> Past Efforts <ReactIconInline i="FaGraduationCap" />
 
-My recent development and research interests were in making ultra-low power neural network inference feasible through work at [Syntiant](https://syntiant.com/). To date, Syntiant has shipped more [neural ASICS](https://en.wikipedia.org/wiki/AI_accelerator#Emergence_of_dedicated_AI_accelerator_ASICs) than any silicon provider in the world for problems ranging from voice interfaces to sensor fusion. I left my full-time position with Syntiant in January 2022 so I could focus on AI assurance. For a full _professional_ history, please view my [LinkedIn profile](https://www.linkedin.com/in/seanbmcgregor).
+My foundational post-doctoral work centered on making ultra-low power neural network
+inference feasible through work at [Syntiant](https://syntiant.com/). To date,
+Syntiant has shipped more [neural ASICS](https://en.wikipedia.org/wiki/AI_accelerator#Emergence_of_dedicated_AI_accelerator_ASICs)
+than any silicon provider in the world for problems ranging from voice interfaces to sensor fusion.
+I left my full-time position with Syntiant in January 2022 so I could focus on AI assurance, including efforts
+related to the AI Incident Database and developing a machine learning system [testing platform](https://dyff.io/) that
+was acquired by Underwriters Laboratories in 2023.
+For a full _professional_ history, please view my [LinkedIn profile](https://www.linkedin.com/in/seanbmcgregor).
 
-### <ReactIconInline i="FaGraduationCap" /> PhD Research
+Prior to Syntiant, my grad school career covered four distinct areas.
+First, I developed a simulator for fire, forest growth, timber sales, and weather.
+Second, I developed visual analytic tools for exploring the policy space of Markov Decision Processes (MDPs),
+including the wildfire simulator. Since many MDPs are defined by computationally expensive simulators,
+I next developed a surrogate modeling method that brings interactive specification of policy, reward, and
+optimization functions to large state space Markov Decision Processes. My final area of focus is Bayesian
+policy search using the surrogate model I developed.
 
-My grad school career covered four distinct areas. First, I developed a simulator for fire, forest growth, timber sales, and weather. Second, I developed visual analytic tools for exploring the policy space of Markov Decision Processes (MDPs), including the wildfire simulator. Since many MDPs are defined by computationally expensive simulators, I next developed a surrogate modeling method that brings interactive specification of policy, reward, and optimization functions to large state space Markov Decision Processes. My final area of focus is Bayesian policy search using the surrogate model I developed.
+# Curriculum Vitae
