--- a/data/cv/Papers/07computermagazine.mdx
+++ b/data/cv/Papers/07computermagazine.mdx
@@ -1,15 +1,15 @@
 ---
 title: "A Scaled Multi-Year Responsible AI Impact Assessment"
-citation: "McGregor, S. (2023). A Scaled Multi-Year Responsible AI Impact Assessment. Computer Magazine."
-bibtex: "@article{McGregor2018,author = {McGregor, Sean},journal = {AI Magazine},number = {TBD},title = {{A Scaled Multi-Year Responsible AI Impact Assessment}},volume = {TBD},year = {2023}}"
+citation: "McGregor, Sean. \"A Scaled Multiyear Responsible Artificial Intelligence Impact Assessment.\" Computer 56.8 (2023): 20-27."
+bibtex: "@article{mcgregor2023scaled,title={A Scaled Multiyear Responsible Artificial Intelligence Impact Assessment},author={McGregor, Sean},journal={Computer},volume={56},number={8},pages={20--27},year={2023},publisher={IEEE}}"
 year: "2023"
 venue: IEEE Computer Magazine
 authors: McGregor, S.
+paper: https://www.computer.org/csdl/api/v1/periodical/mags/co/2023/08/10207067/1PlcNoeVi5G/download-article/pdf
 hide_tags: cv-tag-ml cv-tag-peer-reviewed cv-tag-competition cv-tag-ethics cv-tag-compsust cv-tag-application cv-tag-safety
 ---
-_Forthcoming in 2023_
 
-This is the publication giving the complete rundown of the AI XPRIZE from start to finish.
+This publication gives the complete rundown of the AI XPRIZE from start to finish. I was the lead technical consultant on the prize.
 
 **Abstract**
 
